--- a/MHD/pyproject.toml
+++ b/MHD/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
+pylint = "^2.12.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
