--- a/MHD/pyproject.toml
+++ b/MHD/pyproject.toml
@@ -5,7 +5,10 @@ description = ""
 authors = ["TuuPu <puontit@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = ">=3.8,<3.11"
+keras = "^2.8.0"
+tensorflow = "^2.8.0"
+numpy = "^1.22.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
