--- a/MHD/pyproject.toml
+++ b/MHD/pyproject.toml
@@ -13,6 +13,7 @@ numpy = "^1.22.3"
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.1"
 pylint = "^2.12.2"
+coverage = "^6.3.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
