Added pylint to CI for chec. Threshold set to fail if pylint value <=8

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,3 +39,5 @@ jobs:
         run: poetry run coverage xml
       - name: Coverage report to Codecov
         uses: codecov/codecov-action@v2
+      - name: Lint
+        run: poetry run pylint src --fail-under=8
